feat:adding the RWD

--- a/index.html
+++ b/index.html
@@ -1,68 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-TW">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
+    />
     <title>Japan Travel Mate</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              'japan-red': '#E06A6A', // Softer red
-              'japan-black': '#4A4A4A', // Softer black
-              'paper': '#F9F7F2', // Warm washi paper color
-              'indigo-japan': '#5B6C8C', // Muted indigo
-              'sakura': '#FFE4E8', // Soft pink
-              'sakura-dark': '#F0AAB8',
-              'matcha': '#D3D9C3', // Muted green
-              'matcha-dark': '#8A9A5B',
-              'sand': '#EBE5CE'
-            },
-            fontFamily: {
-              sans: ['"Zen Maru Gothic"', 'sans-serif'],
-            },
-            boxShadow: {
-              'soft': '0 8px 30px rgba(0,0,0,0.04)',
-              'inner-soft': 'inset 0 2px 4px 0 rgba(0, 0, 0, 0.03)',
-            }
-          }
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <script type="importmap">
+      {
+        "imports": {
+          "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+          "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
+          "react/": "https://aistudiocdn.com/react@^19.2.0/",
+          "react": "https://aistudiocdn.com/react@^19.2.0",
+          "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+          "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
         }
       }
     </script>
-    <style>
-      body { background-color: #F9F7F2; color: #4A4A4A; -webkit-tap-highlight-color: transparent; }
-      /* Hide scrollbar for clean UI */
-      .no-scrollbar::-webkit-scrollbar { display: none; }
-      .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
-      
-      /* Animation for tabs */
-      @keyframes fadeScale {
-        from { opacity: 0; transform: scale(0.98); }
-        to { opacity: 1; transform: scale(1); }
-      }
-      .animate-fadeScale {
-        animation: fadeScale 0.2s ease-out forwards;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
-  }
-}
-</script>
-</head>
+  </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
